Fix spacing between title and content of related dependencies tile

--- a/frontend/packages/portal-frontend/src/compound/styles/CorrelationTile.scss
+++ b/frontend/packages/portal-frontend/src/compound/styles/CorrelationTile.scss
@@ -30,6 +30,11 @@
 
 .tileDatasetTitle {
   font-size: 16px;
+  padding-bottom: 10px;
+}
+
+.tableDatasetTitle {
+  font-size: 16px;
 }
 
 .columnStyle {
